--- a/template.html
+++ b/template.html
@@ -51,7 +51,7 @@
 
     <div id='root'></div>
 
-    <a href="./docs/storybook-static/index.html" style="display: none">Storybook</a>
+    <a href="./storybook-static/index.html" style="display: none">Storybook</a>
 
   </main>
 
