fix CLS by stubbing the initial page rendered

--- a/template.html
+++ b/template.html
@@ -52,7 +52,17 @@
       <code id='code'>yarn add react-spinners</code>
     </div>
 
-    <div id='root'></div>
+    <div id='root'>
+      <div class="spinner-container">
+        <div class="color-picker position-abs" />
+        <div class="spinner-item">Loading</div>
+        <div class="spinner-item">Loading</div>
+        <div class="spinner-item">Loading</div>
+        <div class="spinner-item">Loading</div>
+        <div class="spinner-item">Loading</div>
+        <div class="spinner-item">Loading</div>
+      </div>
+    </div>
   </main>
 
   <footer>
