--- a/template.html
+++ b/template.html
@@ -54,13 +54,24 @@
 
     <div id='root'>
       <div class="spinner-container">
-        <div class="color-picker position-abs" />
-        <div class="spinner-item">Loading</div>
-        <div class="spinner-item">Loading</div>
-        <div class="spinner-item">Loading</div>
-        <div class="spinner-item">Loading</div>
-        <div class="spinner-item">Loading</div>
-        <div class="spinner-item">Loading</div>
+        <div class="spinner-item">
+          <a href="#" class="spinner-title">Loading</a>
+        </div>
+        <div class="spinner-item">
+          <a href="#" class="spinner-title">Loading</a>
+        </div>
+        <div class="spinner-item">
+          <a href="#" class="spinner-title">Loading</a>
+        </div>
+        <div class="spinner-item">
+          <a href="#" class="spinner-title">Loading</a>
+        </div>
+        <div class="spinner-item">
+          <a href="#" class="spinner-title">Loading</a>
+        </div>
+        <div class="spinner-item">
+          <a href="#" class="spinner-title">Loading</a>
+        </div>
       </div>
     </div>
   </main>
