--- a/template.html
+++ b/template.html
@@ -39,14 +39,19 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="preload">
   <link rel="stylesheet" type="text/css" href="styles.css">
 
-  <script async defer src="https://analytics.umami.is/script.js" data-website-id="fb8e65fb-2f7b-45b6-b0ab-90328407ebb0"></script>
+  <!-- Google ad sense -->
+  <script
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5203413376871291"
+    crossorigin="anonymous"
+  ></script>
 </head>
 
 <body>
   <header id='header'>
     <h1 class="logo">React Spinners</h1>
 
-    <h2 class="author">by <a href="https://www.davidhu.io" class="umami--click--portfolio-link">David Hu</a></h2>
+    <h2 class="author">by <a href="https://www.davidhu.io">David Hu</a></h2>
   </header>
 
   <main id='main'>
@@ -79,12 +84,12 @@
   </main>
 
   <footer>
-    <a href="https://github.com/davidhu2000/react-spinners" class="umami--click--repo-link">Github</a>
-    <a href="https://www.davidhu.io/blog" style="margin-left: 30px" class="umami--click--blog-link">Blog</a>
+    <a href="https://github.com/davidhu2000/react-spinners">Github</a>
+    <a href="https://www.davidhu.io/blog" style="margin-left: 30px">Blog</a>
   </footer>
 
   <span id="forkongithub">
-    <a href="https://github.com/davidhu2000/react-spinners" class="umami--click--repo-fork-link">Fork me on GitHub</a>
+    <a href="https://github.com/davidhu2000/react-spinners">Fork me on GitHub</a>
   </span>
 
 </body>
