chore: remove umami tracking code  (#567)
* Revert "update umami class to use data-umami-event"

This reverts commit b181b079948bf475bb2f452e4cd8aa23fba649d1.

* Revert "docs: add umami to storybook"

This reverts commit 0c43b2ddfadb2a827922baad2ab40250319f1221.

* Revert "add umami tracking code"

This reverts commit 98002479b00ae4f4e8203fe9523c942321203878.

* fix

--- a/template.html
+++ b/template.html
@@ -38,15 +38,13 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="preload">
   <link rel="stylesheet" type="text/css" href="styles.css">
-
-  <script async defer src="https://analytics.umami.is/script.js" data-website-id="fb8e65fb-2f7b-45b6-b0ab-90328407ebb0"></script>
 </head>
 
 <body>
   <header id='header'>
     <h1 class="logo">React Spinners</h1>
 
-    <h2 class="author">by <a href="https://www.davidhu.io" data-umami-event="portfolio-link-click">David Hu</a></h2>
+    <h2 class="author">by <a href="https://www.davidhu.io">David Hu</a></h2>
   </header>
 
   <main id='main'>
@@ -79,12 +77,12 @@
   </main>
 
   <footer>
-    <a href="https://github.com/davidhu2000/react-spinners" data-umami-event="repo-link-click">Github</a>
-    <a href="https://www.davidhu.io/blog" style="margin-left: 30px" data-umami-event="blog-link-click">Blog</a>
+    <a href="https://github.com/davidhu2000/react-spinners">Github</a>
+    <a href="https://www.davidhu.io/blog" style="margin-left: 30px">Blog</a>
   </footer>
 
   <span id="forkongithub">
-    <a href="https://github.com/davidhu2000/react-spinners" data-umami-event="repo-fork-link-click">Fork me on GitHub</a>
+    <a href="https://github.com/davidhu2000/react-spinners">Fork me on GitHub</a>
   </span>
 
 </body>
